New changes, testing out how to do css and github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div>
-        <h2 id="red-font">Software Developer</h2>
+        <h2 id="blue-font">Software Developer</h2>
         <hr>
         <p>My favorite thing about programming is the way it is creative</p>
     </div>
@@ -27,6 +27,7 @@
     </div>
     <!-- For sthe style sheet, if its an id, which is only specific to one tag, the # always goes before 
     the id attribute. If its a class name then theres a . before the tag. For example, look above. -->
+    <!-- This is a new comment-->
 
     <div>
         <h3>About Me</h3>
